--- a/store/templates/store/user_dashboard.html
+++ b/store/templates/store/user_dashboard.html
@@ -24,10 +24,10 @@
                     <ul>
                         <a class="text-muted" href="{% url 'store:dashboard' %}">
                             <li class="activeDash">
-                                <span class="iconify icon" data-icon="clarity:dashboard-line" data-inline="false"></span> Dashboard
+                                <span class="iconify icon" data-icon="clarity:dashboard-line" data-inline="false"></span> ALL ORDERS
                             </li>
                         </a>
-                        <a class="text-muted" href="{% url 'store:wishlist' %}">
+                        <!-- <a class="text-muted" href="{% url 'store:wishlist' %}">
                             <li>
                                 <span class="iconify" data-icon="ant-design:heart-outlined" data-inline="false"></span> Wishlist
                             </li>
@@ -36,10 +36,10 @@
                             <li>
                                 <span class="iconify" data-icon="carbon:user" data-inline="false"></span> Manage Profile
                             </li>
-                        </a>
+                        </a> -->
                     </ul>
                 </div>
-                <!-- Dashboard sidebar link starts -->
+                <!-- Dashboard sidebar link ends -->
             </div>
             <!-- Dashboard logout button starts -->
             <a class="w-100 btn btn-block btn-danger logout__btn" href="{% url 'store:logout' %}">Logout</a>
@@ -68,24 +68,36 @@
                         <th scope="col" style="text-align: center;">Product</th>
                         <th scope="col" style="text-align: center;">Quantity</th>
                         <th scope="col" style="text-align: center;">Price</th>
+                        <th scope="col" style="text-align: center;">Status</th>
                         <th scope="col" style="text-align: center;">Payment</th>
                       </tr>
                     </thead>
                     <tbody>
                         {% for item in order.items.all %}
-                        <tr>
-                        <th scope="row" style="text-align: center;">{{item.id}}</th>
-                        <td style="text-align: center;">{{item.product.title}}</td>
-                        <td style="text-align: center">{{item.quantity}}</td>
-                        {% if item.product.sale_price %}
-                        <td style="text-align: center;">{{item.product.sale_price}}</td>
-                        {% else %}
-                        <td style="text-align: center;">{{item.product.market_price}}</td>
-                        {% endif %}
-                        <td style="text-align: center;">
-                            <button class="btn btn-success">Make Payment</button>
-                        </td>
-                        </tr>
+                            <tr>
+                                <th scope="row" style="text-align: center;">{{item.id}}</th>
+                                <td style="text-align: center;">{{item.product.title}}</td>
+                                <td style="text-align: center">{{item.quantity}}</td>
+                                {% if item.product.sale_price %}
+                                <td style="text-align: center;">{{item.product.sale_price}}</td>
+                                {% else %}
+                                <td style="text-align: center;">{{item.product.market_price}}</td>
+                                {% endif %}
+                                <td style="text-align: center;">
+                                    {% if order.status == False %}
+                                    <p class="badge bg-success">
+                                         PICKED
+                                    </p>
+                                    {% else %}
+                                        <p class="badge bg-danger">
+                                            PROCESSING
+                                        </p>
+                                    {% endif %}
+                                </td>
+                                <td style="text-align: center;">
+                                    <button class="btn btn-success">Make Payment</button>
+                                </td>
+                            </tr>
                         {% endfor %}
                     </tr>
                     </tbody>
